feat: add polices, resources, requests and api controllers

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -173,5 +173,7 @@
     "Start date": "Início do Projeto",
     "End date": "Encerramento do Projeto",
     "Title": "Título",
-    "Description": "Descrição"
+    "Description": "Descrição",
+    "Advisor": "Orientador",
+    "Assignments": "Vínculo"
 }
